--- a/about-us.html
+++ b/about-us.html
@@ -8,9 +8,19 @@
     <title>Hakkımızda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <style>
+        .card {
+            width: 100%;
+            background-color: #E9ECEF;
+        }
+
+        body {
+            background-color: #E9ECEF;
+        }
+    </style>
 </head>
 
-<body style="background-color: #E9ECEF;">
+<body>
 
     <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container-fluid">
@@ -38,9 +48,10 @@
     <section>
         <div class="container text-center mt-2">
             <h2 class="text-danger">Hakkımızda</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque quae sit blanditiis vitae porro suscipit accusamus, quasi rem magni.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque quae sit blanditiis vitae
+                porro suscipit accusamus, quasi rem magni.</p>
         </div>
-        <div class="card container-fluid" style="width: %100; background-color: #E9ECEF;">
+        <div class="card container-fluid">
             <div class="card-body">
                 <h5 class="card-title text-success">Vizyonumuz</h5>
                 <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nihil pariatur
